--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,8 +8,6 @@ html
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    p.class= notice
-    p.alert= alert
     div
       |  <nav x-data="{ open: false }" @keydown.window.escape="open = false" class="bg-gray-800">
       .max-w-7xl.mx-auto.px-4.sm:px-6.lg:px-8
@@ -23,12 +21,7 @@ html
                 a.px-3.py-2.rounded-md.text-sm.font-medium.text-white.bg-gray-900.focus:outline-none.focus:text-white.focus:bg-gray-700[href="#"]
                   | Dashboard
                 = link_to('Multiplications', next_multiplications_path, class: 'ml-4 px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700')
-                a.ml-4.px-3.py-2.rounded-md.text-sm.font-medium.text-gray-300.hover:text-white.hover:bg-gray-700.focus:outline-none.focus:text-white.focus:bg-gray-700[href="#"]
-                  | Projects
-                a.ml-4.px-3.py-2.rounded-md.text-sm.font-medium.text-gray-300.hover:text-white.hover:bg-gray-700.focus:outline-none.focus:text-white.focus:bg-gray-700[href="#"]
-                  | Calendar
-                a.ml-4.px-3.py-2.rounded-md.text-sm.font-medium.text-gray-300.hover:text-white.hover:bg-gray-700.focus:outline-none.focus:text-white.focus:bg-gray-700[href="#"]
-                  | Reports
+                = link_to('Additions', next_additions_path, class: 'ml-4 px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700')
           .hidden.md:block
             .ml-4.flex.items-center.md:ml-6
               button.p-1.border-2.border-transparent.text-gray-400.rounded-full.hover:text-white.focus:outline-none.focus:text-white.focus:bg-gray-700
