--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -58,10 +58,21 @@
   &.flyFromLeft {
     animation-name: flyFromLeft;
   }
+  position: relative;
 }
 
-.alert {
+.result {
   height: 113px;
+}
+
+.result-box{
+  &.congrats {
+    @apply bg-green-400;
+  }
+  &.missed {
+    @apply bg-orange-400;
+  }
+  margin: auto;
 }
 
 #multiplication_response{
