--- a/app/views/problems/next.html.slim
+++ b/app/views/problems/next.html.slim
@@ -1,8 +1,14 @@
-.text-center
+.grid.grid-cols-3.gap-4.result
+  div
+    | &nbsp;
   - flash.each do |key, value|
-    div class=flash_class(key) role='alert'
-      = value
+    div class="result-box text-center text-4xl font-extrabold" role='alert'
+      div class= "#{flash_class(key)} my-6 rounded shadow-lg px-12 py-2"
+        = value
+        span class='text-xs font-thin' = current_user.current_streak
+  div
 
+.text-center
   div
     = form_with(model: @answer, local: true) do |form|
       = render partial: @answer.problem.type.downcase, locals: { problem: @answer.problem, form: form }
