--- a/app/views/multiplications/_multiplication.html.slim
+++ b/app/views/multiplications/_multiplication.html.slim
@@ -1,13 +1,13 @@
 .text-4xl
   - case @answer.problem.hole_position
   - when 1
-    = form.number_field :text, autofocus: true, size: 1, class: 'w-24 border rounded-lg shadow-sm'
+    = form.number_field :text, autofocus: true, size: 1, class: 'w-24 border rounded-lg shadow-sm', required: true
     = " x #{@answer.problem.number_2} = #{@answer.problem.number_1 * @answer.problem.number_2}"
   - when 2
     = "#{@answer.problem.number_1} x "
-    = form.number_field :text, autofocus: true, size: 1, class: 'w-24 border rounded-lg shadow-sm'
+    = form.number_field :text, autofocus: true, size: 1, class: 'w-24 border rounded-lg shadow-sm', required: true
     = " = #{@answer.problem.number_1 * @answer.problem.number_2}"
   - else
     = "#{@answer.problem.number_1} x #{@answer.problem.number_2} = "
-    = form.number_field :text, autofocus: true, size: 1, class: 'w-24 border rounded-lg shadow-sm'
+    = form.number_field :text, autofocus: true, size: 1, class: 'w-24 border rounded-lg shadow-sm', required: true
   = form.submit 'OK', class: 'mx-10 cursor-pointer text-xl py-2 px-4 border border-transparent leading-5 rounded-md text-white bg-blue-600 hover:bg-blue-500 focus:outline-none focus:border-blue-700 focus:shadow-outline-blue active:bg-blue-700 transition duration-150 ease-in-out'
