add time sessions and divisions

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -21,8 +21,10 @@ html
                 a.px-3.py-2.rounded-md.text-sm.font-medium.text-white.bg-gray-900.focus:outline-none.focus:text-white.focus:bg-gray-700[href="#"]
                   | Dashboard
                 = link_to('Multiplications', next_multiplications_path, class: 'ml-4 px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700')
+                = link_to('Divisions', next_divisions_path, class: 'ml-4 px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700')
                 = link_to('Additions', next_additions_path, class: 'ml-4 px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700')
                 = link_to('Soustractions', next_soustractions_path, class: 'ml-4 px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700')
+                = link_to('Time Sessions', time_sessions_path, class: 'ml-4 px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700')
           .hidden.md:block
             .ml-4.flex.items-center.md:ml-6
               button.p-1.border-2.border-transparent.text-gray-400.rounded-full.hover:text-white.focus:outline-none.focus:text-white.focus:bg-gray-700
