--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -2,3 +2,7 @@ main
   .max-w-7xl.mx-auto.py-6.sm:px-6.lg:px-8
     .px-4.py-6.sm:px-0
       .border-4.border-dashed.border-gray-200.rounded-lg.h-96
+        p.m-2
+          'Bienvenue sur Math trainer
+        p.m-2
+          'Cliquez sur les type d'opérations dans le menu pour les travailler
