--- a/app/views/problems/next.html.slim
+++ b/app/views/problems/next.html.slim
@@ -1,4 +1,6 @@
-.grid.grid-cols-3.gap-4.result
+/ bg-orange-400 bg-green-400
+
+.flex.flex-row.justify-center.h-28
   div
     | &nbsp;
   - flash.each do |key, value|
