--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,6 +7,7 @@ html lang="fr" class="h-full"
     = stylesheet_link_tag 'tailwind', 'inter-font', 'data-turbo-track': 'reload'
 
     = stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
+    = hotwire_livereload_tags
     = javascript_importmap_tags
 
     link href="https://cdn.jsdelivr.net/npm/tom-select/dist/css/tom-select.css" rel="stylesheet"
@@ -64,4 +65,5 @@ html lang="fr" class="h-full"
                 /   | Settings
                 = button_to 'Sign out', destroy_user_session_path, class: 'mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700', method: :delete, data: { turbo: false }
 
-    = yield
+    .p-5
+      = yield
