--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -34,7 +34,7 @@ html lang="fr" class="h-full"
                 div
                   button data-action="dropdown#toggle click@window->dropdown#hide" class="max-w-xs flex items-center text-sm rounded-full text-white focus:outline-none focus:shadow-solid"
                     = current_user&.email
-                .origin-top-right.absolute.right-0.mt-2.w-48.rounded-md.shadow-lg data-dropdown-target="menu" role="menu"
+                .hidden.origin-top-right.absolute.right-0.mt-2.w-48.rounded-md.shadow-lg data-dropdown-target="menu" role="menu"
                   .py-1.rounded-md.bg-white.shadow-xs
                     / a.block.px-4.py-2.text-sm.text-gray-700.hover:bg-gray-100[href="#"]
                     /   | Your Profile
