--- a/app/views/fights/play.html.erb
+++ b/app/views/fights/play.html.erb
@@ -18,9 +18,14 @@
 
     <div class="flex flex-col">    
       <div class="arena z-10">
+        <div >
+          <%= @fight.remaining_player_health %>
+        </div>
         <div class="character" id="player1" style="background-image: url('/Sprite/Idle.png')"></div>
         <div class="character" id="player2" style="background-image: url('/Sprite/Idle.png'); filter: hue-rotate(<%= @fight.fight_opponent.color_rot %>deg);"></div>
-        <div class="result" id="result"></div>
+        <div >
+          <%= @fight.remaining_opponent_health %>
+        </div>
       </div>
 
       <div class='text-center z-30 mt-6' style="z-index: 30;">
