create fight more easily

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -28,7 +28,7 @@ html lang="fr" class="h-full"
                   = link_to('Additions', next_additions_path, class: 'ml-4 px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700')
                   = link_to('Soustractions', next_soustractions_path, class: 'ml-4 px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700')
                   = link_to('Time Sessions', time_sessions_path, class: 'ml-4 px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700')
-                  = link_to('Fight!', fights_path, class: 'ml-4 px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700')
+                  = link_to('Fight!', new_fight_path, class: 'ml-4 px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700')
             .hidden.md:block data-controller='dropdown'
               .ml-4.flex.items-center.md:ml-6
                 |  <div @click.away="open = false" class="ml-3 relative" x-data="{ open: false }">
