--- a/app/views/fights/new.html.slim
+++ b/app/views/fights/new.html.slim
@@ -1,6 +1,21 @@
 div class="mx-auto md:w-2/3 w-full"
   h1 class="font-bold text-4xl" New fight
 
-  #fight_opponents.flex.flex-wrap.justify-space-evenly
+  ul#fight_opponents.flex.flex-wrap.justify-space-evenly.flex-col
     - @fight_opponents.each do |fight_opponent|
-      = button_to fight_opponent.name, fights_path(fight_opponent_id: fight_opponent.id), method: :post, class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer hover:bg-blue-700 m-2"
+      / display the name of the fight_opponent
+      / the heath value in a red heart
+      / the speed value in a blue bolt
+      / and a button to fight them
+      li class="flex items-center justify-between bg-gray-100 p-5 rounded-lg m-5 w-96"
+        h2 class="font-bold text-2xl" = fight_opponent.name
+        div class="flex justify-center items-center"
+          svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-12 text-red-500"
+            path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z"
+          span class="text-sm absolute text-white" = fight_opponent.health
+        div class="flex justify-center items-center"
+          <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-20 text-blue-500">
+            <path stroke-linecap="round" stroke-linejoin="round" d="m3.75 13.5 10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75Z" />
+          </svg>
+          span class="text-sm absolute text-white" = fight_opponent.speed
+        = link_to 'Fight!', new_fight_path(fight_opponent_id: fight_opponent.id), class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium mt-5"
