fix button to create fight

--- a/app/views/fights/new.html.slim
+++ b/app/views/fights/new.html.slim
@@ -18,4 +18,4 @@ div class="mx-auto md:w-2/3 w-full"
             <path stroke-linecap="round" stroke-linejoin="round" d="m3.75 13.5 10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75Z" />
           </svg>
           span class="text-sm absolute text-white" = fight_opponent.speed
-        = link_to 'Fight!', new_fight_path(fight_opponent_id: fight_opponent.id), class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium mt-5"
+        = button_to "Fight #{fight_opponent.name}!", fights_path(fight_opponent_id: fight_opponent.id), method: :post, class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer hover:bg-blue-700 m-2 no-wrap w-fit"
