--- a/app/views/fights/play.html.erb
+++ b/app/views/fights/play.html.erb
@@ -29,16 +29,20 @@
       </div>
 
       <div class='text-center z-30 mt-6' style="z-index: 30;">
-        <div>
-          <%= form_with(model: [@answer, @fight], local: true) do |form| %>
-            <% type_name = @problem.type.downcase %>
-            <% partial_name = "#{type_name}s/#{type_name}" %>
+        <% if @fight.remaining_opponent_health > 0 %>
+          <div>
+            <%= form_with(model: [@answer, @fight], local: true) do |form| %>
+              <% type_name = @problem.type.downcase %>
+              <% partial_name = "#{type_name}s/#{type_name}" %>
 
-            <%= hidden_field_tag :fight_id, @fight.id %>
-            <%= render partial: partial_name, locals: { problem: @problem, form: form } %>
-
-          <% end %>
-        </div>
+              <%= hidden_field_tag :fight_id, @fight.id %>
+              <%= render partial: partial_name, locals: { problem: @problem, form: form } %>
+            <% end %>
+          </div>
+        <% else %>
+          <div class="result-box text-center text-4xl font-bold text-green-600 my-6">You win!</div>
+          <%= button_to 'Start New Fight', new_fight_path, method: :get, class: 'bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded' %>
+        <% end %>
       </div>
     </div>
   </div>
